fixed btn spacing, added some css, added active class using binding

--- a/src/app/order-history/order-item/order-item.css
+++ b/src/app/order-history/order-item/order-item.css
@@ -12,6 +12,7 @@
 .order-info p {
   margin: 0;
   color: #333;
+  padding-bottom: 10px;
 }
 
 .status-label {
@@ -42,4 +43,8 @@
   border-radius: 4px;
   cursor: pointer;
   width: fit-content;
+}
+
+.form-controls{
+  padding-top: 10px;
 }
